--- a/HTML:CSS/HW_4/HW4_2/index.html
+++ b/HTML:CSS/HW_4/HW4_2/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HW4_2</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+  <form>
+    <h1>
+      Вхід в особистий кабінет
+    </h1>
+    <input type="text" placeholder="Логін або email">
+    <input type="password" placeholder="Пароль">
+    <div class="wrapper">
+      <div class="checkbox-wrapper">
+      <label for="checkbox">Запам'ятати мене</label>
+      <input type="checkbox" name="checkbox" id="checkbox">
+      </div>
+      <button >Вхід</button>
+    </div>
+  </form>
 </body>
 </html>
