--- a/HTML:CSS/HW_4/HW4_3/3/index.html
+++ b/HTML:CSS/HW_4/HW4_3/3/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HW4_3_3</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+<header></header>
+<main>
+    <section class="section1">
+        <div class="content1"></div>
+        <div class="content2"></div>
+        <div class="content3"></div>
+    </section>
+    <section class="section2"></section>
+    <section class="section3"></section>
+</main>
+<footer></footer>
 </body>
 </html>
